updated the media query align correctly

--- a/css/index.css
+++ b/css/index.css
@@ -167,23 +167,22 @@ h5 {
   max-width: 880px;
   width: 100%;
   margin: 0 auto;
-
 }
 .main {
-display: flex;
-justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 header {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	margin-top: 25px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 25px;
 }
 header nav {
-	display: flex;
-	justify-content: space-between;
-     width: 680px;
+  display: flex;
+  justify-content: space-between;
+  width: 680px;
 }
 
 header nav a {
@@ -197,7 +196,6 @@ header nav a:hover {
   text-decoration: underline;
 }
 
-
 header nav a:last-child {
   margin-right: 65px;
 }
@@ -206,28 +204,23 @@ header .logo {
   display: inline-block;
 }
 
-
 .top-main {
-width: 880px;
-	height: 555px;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    border-bottom: 2px solid black;
- 
+  width: 880px;
+  height: 555px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  border-bottom: 2px solid black;
 }
 
-
-
 .top-text {
- display: flex;
-	flex-direction: column;
-   justify-content: space-evenly;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
   font-size: 77px;
   margin: 75px;
   text-align: center;
 }
-
 
 .btn {
   background: white;
@@ -249,21 +242,19 @@ width: 880px;
   display: flex;
   justify-content: space-between;
 
-padding-bottom: 15px;
+  padding-bottom: 15px;
 }
 .features,
 .about {
   margin-top: 10px;
- 
-
 }
 .middle-img {
   margin: 45px 0px;
 }
 
 .mains {
-display: flex;
-	justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 .services,
 .products,
@@ -273,8 +264,8 @@ display: flex;
 }
 
 .contact {
-      border-top: 2px solid black;
-    padding: 25px;
+  border-top: 2px solid black;
+  padding: 25px;
 }
 
 .contact a {
@@ -309,83 +300,78 @@ footer h3::before {
 footer h3 {
   align-self: center;
 }
+/* Desktop First 800px */
+@media (max-width: 800px) {
+  .main {
+    width : 800px;
 
-@media(max-width: 800px) {
+  }
 
-header {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	margin-top: 25px;
+
+
+  .fk .main {
+      width: 800px
+  }
 }
-
-}
-
-@media(max-width: 500px) {
-.container {
-  max-width: 500px;
-
-
-}
-header {
+/*Tablet Width 500px */
+@media (max-width: 500px) {
+  .container {
+    max-width: 500px;
+  }
+  header {
     display: flex;
     flex-direction: column-reverse;
- width: 500px;
+    width: 500px;
     justify-content: center;
- margin: 0;
-  
-}
+    margin: 0;
+  }
 
-header nav {
-	display: flex;
-	justify-content: space-between;
-     width: 480px;
+  header nav {
+    display: flex;
+    justify-content: space-between;
+    width: 480px;
     align-items: flex-end;
     height: 30px;
+  }
 
-   
-}
+  header nav a {
+    font-size: 16px;
+    color: gray;
+    text-decoration: none;
+  }
+  header nav a:last-child {
+    margin-right: 40px;
+  }
 
-header nav a {
+  header .logo {
+    display: flex;
+    align-content: flex-start;
+    padding-bottom: 20px;
+  }
 
-  font-size: 16px;
-  color: gray;
-  text-decoration: none;
-}
-header nav a:last-child {
-  margin-right: 40px;
-}
-
-header .logo {
-display: flex;
-align-content: flex-start;
-padding-bottom: 20px;
-
-}
-
-.top-img {
+  .top-img {
     display: none;
-}
+  }
 
+  .top-text {
+    display: flex;
+    align-items: center;
+  }
 
-.top-text {
-display: flex;
-align-items: center;
-
-}
-
-.top-main {
-width: 100%;
-height: 100%;
-  
-}
-.fk .main{
-  display: flex;
-  justify-content: space-evenly;
-  width: 500px;
-  line-height: 20px;
-}
-.middle-img {
-    width:460px;
-}
+  .top-main {
+    width: 100%;
+    height: 100%;
+  }
+  .fk .main {
+    display: flex;
+    justify-content: space-between;
+    width: 480px;
+ 
+  }
+  .mains .main {
+     width: 480px;
+  }
+  .middle-img {
+    width: 460px;
+  }
 }
